--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-decimal": "^7.24.1",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
